# Mecanum-robot-slam-ws

./: .gitignore  README.md  imu_calib.yaml
pcl_map/gazebo_sim/: CornerMap.pcd  trajectory.pcd  transformations.pcd
pcl_map/mj_part_A/: trajectory.pcd  transformations.pcd
pcl_map/sanhak_1st/: CornerMap.pcd  GlobalMap.pcd  SurfMap.pcd  trajectory.pcd  transformations.pcd
pcl_map/sanhak_parkinglot/: CornerMap.pcd  trajectory.pcd  transformations.pcd
pcl_map/test/: CornerMap.pcd  GlobalMap.pcd  SurfMap.pcd  trajectory.pcd  transformations.pcd
pcl_map/test1/: trajectory.pcd  transformations.pcd
pcl_map/산학주차장/: CornerMap.pcd  trajectory.pcd  transformations.pcd
src/LIO-SAM/: CMakeLists.txt
src/LIO-SAM/config/: params (copy).yaml  params.yaml
src/LIO-SAM/include/: utility.h
src/LIO-SAM/launch/: run_localize.launch  run_mecanum.launch  run_rviz.launch  test.launch
src/LIO-SAM/launch/include/: imu_test.launch  module_robot_state_publisher.launch  module_rviz.launch
src/LIO-SAM/src/: mapOptmization.cpp
src/imu_pkg/ros-ngimu/launch/: run_cal.launch
src/imu_pkg/ros-ngimu/rviz/: ngimu.rviz
src/imu_pkg/ros-ngimu/src/: node.cc
src/mecanum_pkg/mecanum_robot_gazebo/: CMakeLists.txt
src/mecanum_pkg/mecanum_robot_gazebo/launch/: mecanum_velodyne.launch
src/mecanum_pkg/openrobot_control/src/: openrobot_control_6omni.cpp
src/slam_pkg/LIO-SAM/config/: params (copy).yaml  (+3 more)
src/slam_pkg/LIO-SAM_based_relocalization-master/: CMakeLists.txt  package.xml
src/trajectory_pkg/local_planner/: CMakeLists.txt
test_data/LOAM/: trajectory.pcd  transformations.pcd
(+280 files in other folders)
